--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "babel-eslint": "10.1.x",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
