--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "6.8.x",
     "eslint-config-airbnb-base": "14.1.x",
     "eslint-plugin-import": "2.20.x",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "postcss": "^8.1.7",
     "postcss-loader": "^4.0.4",
